# bods-data-extractor

./: .gitignore  BODSDataExtractor-demo.ipynb  CODEOWNERS  LICENCE  README.md  full_extract_test.py  manifest.in  new_requirements.txt  pyproject.toml  requirements.txt  test.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: github-actions.yml  pull_request.yml  test.yml
.spyproject/config/: workspace.ini
src/: analysis_example.py
src/BODSDataExtractor/: ADER.xml  ATCO_code_to_LA_lookup.csv  CHAM.xml  CalendarFeature.py  LocalAuthorityDashboard.py  MaintenanceFunction.py  SCHN.xml  classes.py  current_valid_files_logic.py  dictionary_to_dataclass.py  example.py  extractor.py  full_extract_test.py  helpers.py  highest_revision_logic.py  highest_revision_valid_files.py  otc_db_download.py  siri.py  stop_level_test.py  test.py
src/BODSDataExtractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
